--- a/bio.html
+++ b/bio.html
@@ -22,10 +22,12 @@
         <dl>
             <dt>About Me:</dt>
                 <dd>I am 17 years old , and have many hobbies outside of coding. I enjoy playing sports and enjoying outside. But I cant forget I love most of all playing some video games. </dd>
-            <dt>Lucy Funkhouser</dt>
-                <dd>I am 17 years old. I am a varsity cheerleader and tennis player.  </dd>
-
+            <dt>HERE IS SOME PROJECTS </dt>
         </dl>
+        <video width="320" height="240" controls autoplay name="media">
+            <source src="movie.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video>
         </main>
 
         <footer>
